# Computer_Graphic_Lab_1

./: CMakeLists.txt
gl3w/: Makefile
include/: glmain.h  glshader.h  jpegld.h
shader/: fShader.glsl  vShader.glsl
src/: glmain.cpp  glshader.cpp  jpegld.cpp
